--- a/src/main/webapp/scripts/app/agent/admissibility/admissibility.html
+++ b/src/main/webapp/scripts/app/agent/admissibility/admissibility.html
@@ -9,11 +9,14 @@
 			<div class="collapsable-panel" ng-class="{'opened': panel.identity.open}" ng-click="panel.identity.open = !panel.identity.open">
 				<div class="panel-heading">
 					<span class="glyphicon" ng-class="{'glyphicon-triangle-top': panel.identity.open, 'glyphicon-triangle-bottom': !panel.identity.open}"></span>
-					<h5 class="panel-title" translate="admissibility.form.identity">Identity</h5>
+					<h5 class="panel-title" translate="admissibility.form.identity{{identity.validateOn ? '.validated' : ''}}">Identity</h5>
 				</div>
 			</div>
 		</div>
-		<div class="col-xs-3 validation-form">
+		<div class="col-xs-3 validation-form" ng-if="identity.validateOn">
+			<i class="fa fa-check-circle"></i>
+		</div>
+		<div class="col-xs-3 validation-form" ng-if="!identity.validateOn">
 			<i class="fa hand" ng-class="{'fa-check-circle-o': panel.identity.valid !== true, 'fa-check-circle': panel.identity.valid === true, 'inactive': panel.identity.valid === false}" 
 							   ng-click="panel.identity.valid === true ? panel.identity.valid = null : panel.identity.valid = true; panel.identity.open = false;"></i>
 			<span style="margin-left: 10px"></span>
@@ -62,11 +65,14 @@
 			<div class="collapsable-panel" ng-class="{'opened': panel.address.open}" ng-click="panel.address.open = !panel.address.open">
 				<div class="panel-heading">
 					<span class="glyphicon" ng-class="{'glyphicon-triangle-top': panel.address.open, 'glyphicon-triangle-bottom': !panel.address.open}"></span>
-					<h5 class="panel-title" translate="admissibility.form.address">Address</h5>
+					<h5 class="panel-title" translate="admissibility.form.address{{address.validateOn ? '.validated' : ''}}">Address</h5>
 				</div>
 			</div>
 		</div>
-		<div class="col-xs-3 validation-form">
+		<div class="col-xs-3 validation-form" ng-if="address.validateOn">
+			<i class="fa fa-check-circle"></i>
+		</div>
+		<div class="col-xs-3 validation-form" ng-if="!address.validateOn">
 			<i class="fa hand" ng-class="{'fa-check-circle-o': panel.address.valid !== true, 'fa-check-circle': panel.address.valid === true, 'inactive': panel.address.valid === false}" 
 							   ng-click="panel.address.valid === true ? panel.address.valid = null : panel.address.valid = true; panel.address.open = false;"></i>
 			<span style="margin-left: 10px"></span>
