--- a/src/main/webapp/scripts/app/application/identity/identity.html
+++ b/src/main/webapp/scripts/app/application/identity/identity.html
@@ -19,7 +19,7 @@
 		    </div>
 		</div>
 		<br>
-		<div class="row" ng-if="nature !== 'naturalisation'">
+		<div class="row" ng-if="!identity.validateOn">
 			<div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-3">
 			    
 				<identity-form-light ng-model="identity" with-tooltip="true"></identity-form-light>
@@ -83,7 +83,7 @@
 			    </div>
 			</div>
 		</div>
-		<div ng-if="needDocuments && nature !== 'naturalisation'">
+		<div ng-if="needDocuments && !identity.validateOn">
 			<br>
 			<div class="row">
 				<div class="col-xs-1 col-xs-offset-1">
@@ -109,7 +109,7 @@
 			   	</div>
 			</div>
 		</div>
-		<div class="row" ng-if="nature === 'naturalisation'">
+		<div class="row" ng-if="identity.validateOn">
 			<div class="col-xs-8 col-xs-offset-3 col-sm-6 col-sm-offset-5">
 				<ng-include src="'scripts/app/application/identity/identity-light-view.html'"></ng-include>
 			    <div class="form-group">
@@ -131,8 +131,8 @@
 		</div>
 		<br>
 	    <div class="row row-center">
-       		<button ng-if="nature === 'naturalisation'" type="button" class="btn btn-danger" translate="global.button.report">Report</button>
-       		<button type="submit" class="btn btn-primary" ng-class="{'btn-right': nature === 'naturalisation'}" translate="global.button.continue"
+       		<button ng-if="identity.validateOn" type="button" class="btn btn-danger" translate="global.button.report">Report</button>
+       		<button type="submit" class="btn btn-primary" ng-class="{'btn-right': identity.validateOn}" translate="global.button.continue"
        				 ng-disabled="identityForm.$invalid || identityForm.$submitted">Continue</button>
         </div>
 	</form>
