--- a/src/main/webapp/scripts/app/usager/account/application/application.html
+++ b/src/main/webapp/scripts/app/usager/account/application/application.html
@@ -13,7 +13,7 @@
 	<div ng-repeat="application in userApplications">
 		<div class="row">
 			<div class="col-sm-10 col-sm-offset-1">
-				<div class="collapsable-panel" data-toggle="collapse" data-target="#panel{{::$index}}" aria-expanded="false" aria-controls="panel{{::$index}}">
+				<div class="collapsable-panel" data-toggle="collapse" data-target="#panel{{::$index}}">
 					<div class="panel-heading">
 						<span class="glyphicon glyphicon-triangle-bottom"></span>
 						<h5 class="panel-title" 
