--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -75,7 +75,7 @@
   		<script src="bower_components/webcamjs/webcam.min.js"></script>
 		<script src="bower_components/ng-camera/dist/ng-camera.js"></script>
 		<script src="bower_components/signature_pad/signature_pad.js"></script>
-		<script src="bower_components/smartJQueryZoom-test/src/e-smart-zoom-jquery.min.js"></script>
+		<script src="bower_components/jquery.panzoom/dist/jquery.panzoom.min.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
 
